syntax = "proto3";

import "maptool.map-entity.proto";

message Request {
    oneof request {
        GetAllMapEntities.Request get_all_map_entities = 1;
        SetMapEntity.Request set_map_entity = 2;
    }
}

message Response {
    oneof response {
        GetAllMapEntities.Response get_all_map_entities = 1;
        SetMapEntity.Response set_map_entity = 2;
    }
}

message MaptoolMessage {
    string id = 1;

    oneof message{
        Request request = 2;
        Response response = 3;
    }
}


